2009-07-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/chm_common.c (R_cholmod_l_start): set print_function to NULL,
	as we have long suggested ==> get rid of random strings seen in
	some cholmod warnings.

	* R/ldenseMatrix.R (.rcond_via_d): fix thinko

2009-07-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/CHMfactor.R (isLDL): need a "!" as 'type' is "is_ll"
	* src/dsCMatrix.c (dsCMatrix_Cholesky): update, notably when caching.

	* tests/indexing.R: test col.names printing of sparseMatrix

2009-07-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* inst/test-tools.R (allCholesky): new testing function

2009-07-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dsCMatrix.c (dsCMatrix_Cholesky): add possibility to set each
	of 'perm', 'LDL', and 'super' to NA (in addition to TRUE / FALSE).
	in these case, a CHOLMOD-heuristic choses the option "sensibly".
	* man/Cholesky.Rd: document the new possibility.

2009-07-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/rankMatrix.R (rankMatrix): diff(sval) <= 0

	* R/spModels.R (model.spmatrix): fix case of missing main effect
	* tests/spModel.matrix.R: new file

2009-07-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (show, printSpMatrix2): both print() and show()
	now use printSpMatrix2(), and that now already prints
	"<n> x <m> sparse Matrix of class ...".

	* R/CHMfactor.R (isLDL): fix and
	* NAMESPACE: export  isLDL()

2009-07-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (model.spmatrix): mf may be simple data.frame

2009-07-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: export sparse.model.matrix() and
	* man/sparse.model.matrix.Rd: document it

2009-07-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R (intI): also work for integer dimnames (well ..)

2009-07-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R: "factor out" sparse model things into
